--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -48,18 +48,44 @@
     <div class="embla__viewport">
       <div class="embla__container">
         <div class="embla__slide">
-          <img src="assets/img/main.jpg" alt="Nature landscape placeholder">
-          <div class="embla__overlay">
-            <h1>Placeholder title</h1>
-            <p>Placeholder subtitle</p>
-            <div class="embla__controls">
-              <button class="embla__prev" aria-label="Previous slide"></button>
-              <button class="embla__next" aria-label="Next slide"></button>
-            </div>
-          </div>
+          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 1">
         </div>
+        <div class="embla__slide">
+          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 2">
+        </div>
+        <div class="embla__slide">
+          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 3">
+        </div>
+        <div class="embla__slide">
+          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 4">
+        </div>
+        <div class="embla__slide">
+          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 5">
+        </div>
+      </div>
+    </div>
+    <div class="embla__overlay">
+      <div class="embla__copy">
+        <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
+        <p>All handmade by Out of the Valley, in Devon, England</p>
+      </div>
+      <div class="embla__asset-text">
+        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">Aquila Sauna</a></p>
+        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">Falco Sauna</a></p>
+        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">Lutra Sauna</a></p>
+        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">Calluna Sauna</a></p>
+        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">Falco Sauna</a></p>
+      </div>
+      <div class="embla__controls">
+        <button class="embla__prev" aria-label="Previous slide">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z"/></svg>
+        </button>
+        <button class="embla__next" aria-label="Next slide">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z"/></svg>
+        </button>
       </div>
     </div>
   </div>
 </section>
 <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
+<script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
