--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,9 @@
 }
 
 .site-header {
+  /*position: fixed;*/
   position: sticky;
+  left: 0; right: 0;
   top: 0;
   z-index: 1000;
   display: flex;
