--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,15 +77,13 @@
 }
 
 .site-header.is-hidden   { transform: translate3d(0,-100%,0); opacity: 0; }
-.site-header.is-gradient { color: #fff; }
+
 .site-header.is-gradient::before { opacity: 1; }
-.site-header.is-scrolled { color: #111; }
 .site-header.is-scrolled::after { opacity: 1; }
 
 .site-header.is-scrolled .brand-title { color: #111; mix-blend-mode: normal; }
+.site-header.is-gradient .brand-title { color: #fff; }
 .site-header.is-gradient .nav-item { color: #fff; }
-
-html.hdr-overlay .brand-title { mix-blend-mode: normal; }
 
 .brand-title {
   position: fixed;
