--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -1,4 +1,7 @@
-<a class="brand-title" href="/gasirim.github.io/">加 時 林 | 치유의 정원</a>
+<a class="brand-title" href="/gasirim.github.io/">
+  <img src="assets/img/가시림_나무.png" alt="가시림 로고" class="brand-logo" />
+  <span class="brand-text">加 時 林 | 치유의 정원</span>
+</a>
 <section class="hero-slideshow">
   <div class="embla">
     <div class="embla__viewport">
