--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -1,5 +1,5 @@
 <a class="brand-title" href="/gasirim.github.io/">
-  <img src="assets/img/로고_나무_white.png" alt="가시림 로고" class="brand-logo" />
+  <img src="../assets/img/로고_나무_white.png" alt="가시림 로고" class="brand-logo" />
   <span class="brand-text">加 時 林 | 치유의 정원</span>
 </a>
 <section class="hero-slideshow">
