--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -1,25 +1,26 @@
 <a class="brand-title" href="/gasirim.github.io/">
-  <img src="./assets/img/로고_나무_white.jpg" alt="가시림 로고" class="brand-logo" />
-  <span class="brand-text">加 時 林 | 치유의 정원</span>
+  <img src="./assets/img/logo_tree_white.jpg" alt="가시림 로고" class="brand-logo" />
+  <span class="brand-text", style="font-family: var(--font-mincho);">加 時 林</span>
+  <span class="brand-text", style="font-family: var(--font-myeongj);">치유의 정원</span>
 </a>
 <section class="hero-slideshow">
   <div class="embla">
     <div class="embla__viewport">
       <div class="embla__container">
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 1">
+          <img src="./assets/img/main.jpg" alt="Slide 1">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 2">
+          <img src="./assets/img/main.jpg" alt="Slide 2">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 3">
+          <img src="./assets/img/main.jpg" alt="Slide 3">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 4">
+          <img src="./assets/img/main.jpg" alt="Slide 4">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 5">
+          <img src="./assets/img/main.jpg" alt="Slide 5">
         </div>
       </div>
     </div>
@@ -29,11 +30,11 @@
         <p>All handmade by Out of the Valley, in Devon, England</p>
       </div>
       <div class="embla__asset-text">
-        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">Aquila Sauna</a></p>
-        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">Falco Sauna</a></p>
-        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">Lutra Sauna</a></p>
-        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">Calluna Sauna</a></p>
-        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">Falco Sauna</a></p>
+        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
+        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">메타세쿼이어 숲</a></p>
+        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">팜파스그라스 길</a></p>
+        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">곶자왈</a></p>
+        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원a</a></p>
       </div>
       <div class="embla__controls">
         <button class="embla__prev" aria-label="Previous slide">
