seperate the line

--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -1,6 +1,6 @@
 <a class="brand-title" href="/gasirim.github.io/">
   <img src="./assets/img/logo_tree_white.jpg" alt="가시림 로고" class="brand-logo" />
-  <span class="brand-text", style="font-family: var(--font-mincho);">加 時 林</span>
+  <span class="brand-text", style="font-family: var(--font-mincho);">加 時 林</span><br>
   <span class="brand-text", style="font-family: var(--font-myeongj);">치유의 정원</span>
 </a>
 <section class="hero-slideshow">
