Style Embla overlay text

--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -27,14 +27,14 @@
     <div class="embla__overlay">
       <div class="embla__copy">
         <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
-        <p>All handmade by Out of the Valley, in Devon, England</p>
+        <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
       </div>
       <div class="embla__asset-text">
-        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
-        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">메타세쿼이어 숲</a></p>
-        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">팜파스그라스 길</a></p>
-        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">곶자왈</a></p>
-        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원a</a></p>
+        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/"><span class="text-variable">오름 정원</span></a></p>
+        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/"><span class="text-variable">메타세쿼이어 숲</span></a></p>
+        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/"><span class="text-variable">팜파스그라스 길</span></a></p>
+        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/"><span class="text-variable">곶자왈</span></a></p>
+        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/"><span class="text-variable">수국 정원a</span></a></p>
       </div>
       <div class="embla__controls">
         <button class="embla__prev" aria-label="Previous slide">
