--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -70,14 +70,14 @@
     <div class="embla__overlay">
       <div class="embla__copy">
         <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
-        <p>All handmade by Out of the Valley, in Devon, England</p>
+        <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
       </div>
       <div class="embla__asset-text">
-        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">Aquila Sauna</a></p>
-        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">Falco Sauna</a></p>
-        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">Lutra Sauna</a></p>
-        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">Calluna Sauna</a></p>
-        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">Falco Sauna</a></p>
+        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/"><span class="text-variable">Aquila Sauna</span></a></p>
+        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/"><span class="text-variable">Falco Sauna</span></a></p>
+        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/"><span class="text-variable">Lutra Sauna</span></a></p>
+        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/"><span class="text-variable">Calluna Sauna</span></a></p>
+        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/"><span class="text-variable">Falco Sauna</span></a></p>
       </div>
       <div class="embla__controls">
         <button class="embla__prev" aria-label="Previous slide">
