--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,9 +206,33 @@
   max-width: 58ch;
 }
 
+.embla__copy h1 {
+  margin-bottom: .5rem;
+  font-size: 1.5rem;
+}
+
+.embla__copy p {
+  font-size: .875rem;
+}
+
+.text-variable {
+  color: hsla(40,20%,56.2%,1);
+}
+
 .embla__asset-text {
   position: relative;
   display: grid;
+  font-size: .875rem;
+}
+
+.embla__asset-text a {
+  color: #fff;
+  text-decoration: none;
+  transition: opacity .2s ease;
+}
+
+.embla__asset-text a:hover {
+  opacity: .6;
 }
 
 .asset-text {
