--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -27,23 +27,24 @@
     <div class="embla__overlay">
       <div class="embla__copy">
         <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
-        <p>All handmade by Out of the Valley, in Devon, England</p>
+        <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
       </div>
-      <div class="embla__asset-text">
-        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
-        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">메타세쿼이어 숲</a></p>
-        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">팜파스그라스 길</a></p>
-        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">곶자왈</a></p>
-        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원a</a></p>
-      </div>
-      <div class="embla__controls">
-        <button class="embla__prev" aria-label="Previous slide">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z"/></svg>
-        </button>
-        <button class="embla__next" aria-label="Next slide">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z"/></svg>
-
-        </button>
+      <div class="embla__meta">
+        <div class="embla__asset-text">
+          <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/"><span class="text-variable">오름 정원</span></a></p>
+          <p class="asset-text" data-index="1"><a href="/gasirim.github.io/"><span class="text-variable">메타세쿼이어 숲</span></a></p>
+          <p class="asset-text" data-index="2"><a href="/gasirim.github.io/"><span class="text-variable">팜파스그라스 길</span></a></p>
+          <p class="asset-text" data-index="3"><a href="/gasirim.github.io/"><span class="text-variable">곶자왈</span></a></p>
+          <p class="asset-text" data-index="4"><a href="/gasirim.github.io/"><span class="text-variable">수국 정원a</span></a></p>
+        </div>
+        <div class="embla__controls">
+          <button class="embla__prev" aria-label="Previous slide">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z"/></svg>
+          </button>
+          <button class="embla__next" aria-label="Next slide">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z"/></svg>
+          </button>
+        </div>
       </div>
     </div>
   </div>
