--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -27,7 +27,7 @@
     <div class="embla__overlay">
       <div class="embla__copy">
         <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
-        <p>All handmade by Out of the Valley, in Devon, England</p>
+        <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
       </div>
       <div class="embla__asset-text">
         <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
@@ -42,7 +42,6 @@
         </button>
         <button class="embla__next" aria-label="Next slide">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z"/></svg>
-
         </button>
       </div>
     </div>
