--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -70,7 +70,7 @@
     <div class="embla__overlay">
       <div class="embla__copy">
         <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
-        <p>All handmade by Out of the Valley, in Devon, England</p>
+        <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
       </div>
       <div class="embla__asset-text">
         <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">Aquila Sauna</a></p>
