--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -1,7 +1,9 @@
 <a class="brand-title" href="/gasirim.github.io/">
   <img src="./assets/img/logo_tree_white.jpg" alt="가시림 로고" class="brand-logo" />
-  <span class="brand-text", style="font-family: var(--font-mincho);">加 時 林</span><br>
-  <span class="brand-text", style="font-family: var(--font-myeongj);">치유의 정원</span>
+  <span class="brand-text">
+    <span class="brand-name">加 時 林</span>
+    <span class="brand-tagline">치유의 정원</span>
+  </span>
 </a>
 <section class="hero-slideshow">
   <div class="embla">
