--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -43,8 +43,11 @@
   </nav>
 </header>
 <a class="brand-title" href="/gasirim.github.io/">
-  <img src="assets/img/가시림_나무.png" alt="가시림 로고" class="brand-logo" />
-  <span class="brand-text">加 時 林 | 치유의 정원</span>
+  <img src="assets/img/logo_tree_white.png" alt="가시림 로고" class="brand-logo" />
+  <span class="brand-text">
+    <span class="brand-name">加 時 林</span>
+    <span class="brand-tagline">치유의 정원</span>
+  </span>
 </a>
 <section class="hero-slideshow">
   <div class="embla">
