--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -1,49 +1,5 @@
-<header class="site-header" data-header>
-  <!-- Mobile menu button -->
-  <button
-    class="nav-toggle"
-    type="button"
-    aria-expanded="false"
-    aria-controls="main-menu"
-    aria-label="메인 메뉴 열기/닫기">
-    <span class="sr-only">메뉴</span>
-    <svg width="26" height="26" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-      <path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-    </svg>
-  </button>
-
-  <nav class="navbar" role="navigation" aria-label="Main navigation">
-    <ul id="main-menu" class="nav-main">
-      <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
-        <a href="소개.html">소개</a>
-        <ul class="nav-sub" role="menu" aria-label="소개 하위 메뉴">
-          <li role="menuitem"><a href="공간소개.html">공간 소개</a></li>
-          <li role="menuitem"><a href="수목원지도.html">수목원 지도</a></li>
-          <li role="menuitem"><a href="둘러보기.html">둘러보기</a></li>
-        </ul>
-      </li>
-      <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
-        방문
-        <ul class="nav-sub" role="menu" aria-label="방문 하위 메뉴">
-          <li role="menuitem"><a href="이용안내.html">이용 안내</a></li>
-          <li role="menuitem"><a href="오시는길.html">오시는 길</a></li>
-          <li role="menuitem"><a href="단체문의.html">단체 문의</a></li>
-        </ul>
-      </li>
-      <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
-        프로그램
-        <ul class="nav-sub" role="menu" aria-label="프로그램 하위 메뉴">
-          <li role="menuitem"><a href="산책명상.html">산책명상</a></li>
-          <li role="menuitem"><a href="명상.html">명상</a></li>
-          <li role="menuitem"><a href="원예.html">원예</a></li>
-        </ul>
-      </li>
-      <li class="nav-item" tabindex="0"><a href="shop.html">Shop</a></li>
-    </ul>
-  </nav>
-</header>
 <a class="brand-title" href="/gasirim.github.io/">
-  <img src="assets/img/logo_tree.png" alt="가시림 로고" class="brand-logo" />
+  <img src="./assets/img/logo_tree.png" class="brand-logo" />
   <span class="brand-text">
     <span class="brand-name">加 時 林</span>
     <span class="brand-tagline">치유의 정원</span>
@@ -54,19 +10,19 @@
     <div class="embla__viewport">
       <div class="embla__container">
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 1">
+          <img src="./assets/img/main.jpg" alt="Slide 1">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 2">
+          <img src="./assets/img/main.jpg" alt="Slide 2">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 3">
+          <img src="./assets/img/main.jpg" alt="Slide 3">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 4">
+          <img src="./assets/img/main.jpg" alt="Slide 4">
         </div>
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Slide 5">
+          <img src="./assets/img/main.jpg" alt="Slide 5">
         </div>
       </div>
     </div>
@@ -75,22 +31,20 @@
         <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
         <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
       </div>
-      <div class="embla__meta">
-        <div class="embla__asset-text">
-          <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/"><span class="text-variable">Aquila Sauna</span></a></p>
-          <p class="asset-text" data-index="1"><a href="/gasirim.github.io/"><span class="text-variable">Falco Sauna</span></a></p>
-          <p class="asset-text" data-index="2"><a href="/gasirim.github.io/"><span class="text-variable">Lutra Sauna</span></a></p>
-          <p class="asset-text" data-index="3"><a href="/gasirim.github.io/"><span class="text-variable">Calluna Sauna</span></a></p>
-          <p class="asset-text" data-index="4"><a href="/gasirim.github.io/"><span class="text-variable">Falco Sauna</span></a></p>
-        </div>
-        <div class="embla__controls">
-          <button class="embla__prev" aria-label="Previous slide">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z"/></svg>
-          </button>
-          <button class="embla__next" aria-label="Next slide">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z"/></svg>
-          </button>
-        </div>
+      <div class="embla__asset-text">
+        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
+        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">메타세쿼이어 숲</a></p>
+        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">팜파스그라스 길</a></p>
+        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">곶자왈</a></p>
+        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원a</a></p>
+      </div>
+      <div class="embla__controls">
+        <button class="embla__prev" aria-label="Previous slide">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M11.77 1.77 10 0 0 10l10 10 1.77-1.77L3.54 10l8.23-8.23Z"/></svg>
+        </button>
+        <button class="embla__next" aria-label="Next slide">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20" fill="currentColor"><path d="M0 18.23 1.77 20l10-10-10-10L0 1.77 8.23 10 0 18.23Z"/></svg>
+        </button>
       </div>
     </div>
   </div>
