--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1069,12 +1069,26 @@
   position: relative;
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
-  height: 86px;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
+  height: 81px;
   background: #fff;
   padding: 0;
+}
+
+.intro-tabs .tab-button {
+  flex: 1 1 0;
+  width: auto;
+  height: 100%;
+  border: none;
+  background: #fff;
+  color: #454545;
+}
+
+.intro-tabs .tab-button.active {
+  background: #e5e5e5;
+  color: #454545;
 }
 
 .space-tabs {
