--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -80,7 +80,7 @@
         <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">메타세쿼이어 숲</a></p>
         <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">팜파스그라스 길</a></p>
         <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">곶자왈</a></p>
-        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원a</a></p>
+        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원</a></p>
       </div>
       <div class="embla__controls">
         <button class="embla__prev" aria-label="Previous slide">
