--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -755,7 +755,6 @@
 
 .hero-overlay a {
   color: #fff;
-  text-decoration: underline;
 }
 
 @keyframes hero-fade {
@@ -1087,7 +1086,7 @@
 }
 
 .intro-tabs .tab-button.active {
-  background: #e5e5e5;
+  background: rgba(217, 217, 217, 0.21);
   color: #454545;
 }
 
@@ -1095,7 +1094,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 8px;
+  gap: 100px;
   height: 103px;
 }
 
@@ -1113,6 +1112,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 8px;
 }
 
 .tab-button:not(.active):hover,
