--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -43,7 +43,7 @@
   </nav>
 </header>
 <a class="brand-title" href="/gasirim.github.io/">
-  <img src="./assets/img/logo_tree.png" class="brand-logo" />
+  <img src="./assets/img/logo_tree_white.png" class="brand-logo" />
   <span class="brand-text">
     <span class="brand-name">加 時 林</span>
     <span class="brand-tagline">치유의 정원</span>
