--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -28,7 +28,7 @@
     </div>
     <div class="embla__overlay">
       <div class="embla__copy">
-        <h1>Leading the way in British-made outdoor saunas, with the finest natural materials &amp; heat technology</h1>
+        <h1>제주가 품은 정원, 마음을 여는 공간</h1>
         <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
       </div>
       <div class="embla__asset-text">
