--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,12 @@
   padding-right: clamp(20px, 8vw, 100px);
   padding-left: clamp(20px, 8vw, 100px);
   padding-bottom: clamp(10px, 4.5vh, 20px);
+
+  padding-top: clamp(10px, 4vh, 80px);
+  padding-right: clamp(20px, 8vw, 350px);
+  padding-left: clamp(20px, 8vw, 350px);
+  padding-bottom: clamp(10px, 4vh, 80px);
+  
   z-index: 2000;
   display: flex;
   align-items: center;
@@ -221,7 +227,10 @@
   flex-wrap: wrap;
   align-items: flex-end;
   gap: 2rem;
-  padding: 68px 195px;
+  padding-top: clamp(20px, 15vh, 190px);
+  padding-bottom: clamp(20px, 15vh, 190px);
+  padding-right: clamp(20px, calc(8vw + max(50px, 3vw) + 28px), 350px);
+  padding-left: clamp(20px, calc(8vw + max(50px, 3vw) + 28px), 350px);
   color: #fff;
   background: linear-gradient(to top, rgba(0,0,0,.8) 0%, rgba(0,0,0,0) 60%);
 }
@@ -232,7 +241,8 @@
 
 .embla__copy h1 {
   margin-bottom: .25rem;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
+  font-weight: 400;
   line-height: 1.25;
 }
 
