--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -1,17 +1,14 @@
 <header class="site-header" data-header>
-  <!-- Mobile menu button
+  <!-- Mobile menu button -->
   <button
     class="nav-toggle"
     type="button"
     aria-expanded="false"
     aria-controls="main-menu"
     aria-label="메인 메뉴 열기/닫기">
-    <span class="sr-only">메뉴</span>
-    <svg width="26" height="26" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-      <path d="M3 6h18M3 12h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-    </svg>
-  </button> -->
-  
+    <img src="../img/logo_tree_white.jpg" alt="메뉴 아이콘" />
+</button>
+
   <!-- navi bar -->
   <nav class="navbar" role="navigation" aria-label="Main navigation">
     <ul id="main-menu" class="nav-main">
