--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -6,7 +6,7 @@
     aria-expanded="false"
     aria-controls="main-menu"
     aria-label="메인 메뉴 열기/닫기">
-    <img src="../img/logo_tree_white.png" alt="메뉴 아이콘" />
+    <img src="./assets/img/logo_tree_white.png" alt="메뉴 아이콘" />
 </button>
 
   <!-- navi bar -->
