--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -863,13 +863,12 @@
 .parallax { will-change: transform; }
 
 /* ===== Cards ===== */
-.cards-space {
+.cards-container {
   position: relative;
   width: 100%;
   max-width: 100%;
   background: transparent;
   padding: var(--page-pad);
-  /* padding-top: 40px;*/
 }
 
 .cards-title {
@@ -898,6 +897,7 @@
   gap: clamp(16px, 3vw, 40px) 2%;
 }
 
+/* ===== for 둘러보기 page ===== */
 .gallery-cards {
   position: relative;
   width: 89%;
@@ -928,6 +928,29 @@
   background-size: cover;
   background-position: center;
   transition: transform 500ms cubic-bezier(.2,.7,.2,1), filter 500ms ease;
+}
+
+/* ===== for 공간 소개 page ===== */
+.space-card {
+  width: 624px;
+  height: 409px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+}
+
+.space-card-img {
+  width: 100%;
+  height: 341px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.space-card-title {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 150%;
 }
 
 .card-overlay {
@@ -1142,36 +1165,3 @@
   padding-top: 40px;
 }
 
-.space-panel {
-  margin-top: 40px;
-}
-
-.card-grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 31px;
-  justify-content: center;
-  align-items: center;
-}
-
-.intro-card {
-  width: 624px;
-  height: 409px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 32px;
-}
-
-.intro-card-img {
-  width: 100%;
-  height: 341px;
-  object-fit: cover;
-  border-radius: 8px;
-}
-
-.intro-card-title {
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 150%;
-}
