--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -29,7 +29,7 @@
     <div class="embla__overlay">
       <div class="embla__copy">
         <h1>제주가 품은 정원, 마음을 여는 공간</h1>
-        <p><span class="text-variable">All handmade by Out of the Valley, in Devon, England</span></p>
+        <p><span class="text-variable">제주 민간 4호 정원, 가시림</span></p>
       </div>
       <div class="embla__asset-text">
         <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
