removed motion from the right video

--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -7,7 +7,7 @@
 </a>
 <section class="hero-slideshow hero-slideshow--video">
   <div class="hero-video__container">
-    <div class="intro-hero parallax" data-video>
+    <div class="intro-hero" data-video>
       <video class="intro-video" preload="auto" autoplay muted loop playsinline webkit-playsinline disablePictureInPicture controlsList="nodownload noplaybackrate noremoteplayback nofullscreen">
         <source src="./assets/video/gasirim.mp4" type="video/mp4">
         비디오를 재생할 수 없는 환경입니다.
