--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -10,7 +10,7 @@
     <div class="embla__viewport">
       <div class="embla__container">
         <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 1">
+          <img src="./assets/img/fall.jpg" alt="Slide 1">
         </div>
         <div class="embla__slide">
           <img src="./assets/img/main.jpg" alt="Slide 2">
