changing all photos

--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -10,16 +10,16 @@
     <div class="embla__viewport">
       <div class="embla__container">
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/fall.jpg" alt="Slide 1">
+          <img src="./assets/img/banner-fourseasons/summer.jpg" alt="Slide 1">
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 2">
+          <img src="./assets/img/banner-fourseasons/fall.jpg" alt="Slide 2">
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 3">
+          <img src="./assets/img/banner-fourseasons/winter.jpg" alt="Slide 3">
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 4">
+          <img src="./assets/img/banner-fourseasons/winter(withoutsnow).jpg" alt="Slide 4">
         </div>
         <div class="embla__slide">
           <img src="./assets/img/main.jpg" alt="Slide 5">
