--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -28,8 +28,10 @@
     </div>
     <div class="embla__overlay">
       <div class="embla__copy">
-        <h1>제주가 품은 정원, 마음을 여는 공간</h1>
-        <p><span class="text-variable">제주 민간 4호 정원, 가시림</span></p>
+        <h1>
+          <span class="embla__line">제주가 품은 정원</span>
+          <span class="embla__line">마음을 여는 공간</span>
+        </h1>
       </div>
       <div class="embla__asset-text">
         <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
